Commented maven-war-plugin from percensio-handler POM. This should be configured on a case-by case approach.

--- a/percensio-handler/pom.xml
+++ b/percensio-handler/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <!--build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -53,6 +53,6 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build-->
 
 </project>
