--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>percensio</name>
+    <name>percenseo</name>
     <groupId>com.motionizr</groupId>
-    <artifactId>percensio</artifactId>
+    <artifactId>percenseo</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>percensio-commons</module>
-        <module>percensio-executor</module>
-        <module>percensio-handler</module>
-        <module>percensio-initializer</module>
+        <module>percenseo-commons</module>
+        <module>percenseo-executor</module>
+        <module>percenseo-handler</module>
+        <module>percenseo-initializer</module>
     </modules>
 
     <dependencyManagement>
